[package]
name = "production-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.18"
tiberius = {version = "0.11.2"}
tokio = { version= "1.21.2", features= ["full"]}
tokio-util = { version = "0.7.4", features = ["full"] }
anyhow = "1.0.65"
serde_json = "1.0.85"
reqwest = { version = "0.11.5", features = ["blocking"] }
chrono = "0.4.22"
colored = "2.0.0"

[profile.release]
opt-level = 3